[WFK2-600] - Fix Delete without Permissions bug in contacts-mobile-picketlink-secured.

--- a/contacts-mobile-picketlink-secured/src/main/webapp/index.html
+++ b/contacts-mobile-picketlink-secured/src/main/webapp/index.html
@@ -306,7 +306,7 @@
                      pulled in from the Update form.
                 -->
                 <h3>Are you sure you want to Delete?</h3>
-                <a href="#contacts-list-page" id="confirm-delete-button" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b">Yes</a>
+                <a id="confirm-delete-button" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b">Yes</a>
                 <a href="#contacts-list-page" id="cancel-delete-button" class="ui-btn ui-corner-all ui-shadow ui-btn-inline">No</a>
             </div>
         </div>
